# DBBE-archiver

./: .gitignore  DB_DESCRIPTION.html  README.md  experimental_setup.ipynb  migrate-dbbe.ipynb  pyproject.toml
.github/workflows/: docker.yml
app/: .env  DB_DESCRIPTION.html  Dockerfile  common.py  init_db.py  migrate_bibliographies.py  migrate_manuscripts.py  migrate_occurrences.py  migrate_persons.py  migrate_types.py  migrate_verses.py  pyproject.toml  run_migration.py  zenodo_upload.py
app/migrate_bibliographies/: __init__.py  biblio_entity.py  biblio_entity_enum.py  book_chapters.py  cleanup.py  insert_bibliographies.py  insert_bibliography_references.py  insert_main_bibliographies.py  journals.py  link_articles_to_journals.py  link_bibliographies_to_bibsubjects.py  link_chapters_to_books.py  link_managements_to_bibliographies.py  link_persons_to_bibliographies.py  references.py  schema.py
app/migrate_manuscripts/: __init__.py  insert_manuscripts.py  migrate_manuscripts.py  schema.py
app/migrate_occurrences/: __init__.py  insert_occurrences.py  migrate_occurrences.py  schema.py
app/migrate_persons/: insert_persons.py  migrate_persons.py  schema.py
app/migrate_types/: __init__.py  insert_types.py  migrate_types.py  schema.py
app/migrate_verses/: migrate_verses.py
app/tests/: db.py  run_all_tests.py  test_acknowledgements.py  utils.py  (+21 more)
demo/: bibliography.html  byzantine-db.html  manuscript-detail.html  manuscripts.html  occurrence-detail.html  person-detail.html  persons.html  type-detail.html  types.html
docker/: Dockerfile  healthcheck-wrapper.sh
(+23 files in other folders)
